fix issue user cannot login with email
